src/index.css
/* Variables */
:root {
  --background-color: #FFFFFF;
  --button-text-color: #F0F0F2;
  --navbar-background-color: #D9D7C5;
  --navbar-text-color: #7c797b;
  --primary-highlight-color: #73241D;
  --secondary-highlight-color: #BF3C30;
  --text-color-primary: #231F20;
}

/* Typefaces */
@font-face {
  font-family: 'JetBrainsMono-Light';
  src: local('JetBrainsMono-Light'), url('./fonts/JetBrainsMono-Light.woff') format('woff');
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PP Agrandir Text';
  src: local('PP Agrandir Text'), url('./fonts/PPAgrandirText-Bold.woff') format('woff');
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

/* Body */
body {
  color: var(--text-color-primary);
  font-family: 'JetBrainsMono-Light';
  margin: 0;
}

/* Site Header/Logo */
.siteLogoContainer {
  align-items: center;
  display: flex;
  height: 50px;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1000;
 }

 .siteLogo {
  margin-top: 0.75rem;
 }

 .siteLogo:hover {
  cursor: pointer;
 }

/* Navbar */
.navbarContainer {
  align-items: center;
  background-color: var(--navbar-background-color);
  bottom: 0;
  display: flex;
  height: 95px;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  z-index: 1000;
}

.navbarNav {
  margin-top: 0.75rem;
  overflow-y: hidden;
  width: 100%;
}

.navbarListItemsContainer {
  align-items: center;
  display: flex;
  font-family: 'PP Agrandir Text';
  font-size: 1rem;
  justify-content: space-evenly;
  margin: 0;
  padding: 0;
}

.navbarListItem {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-direction: column;
}

.navbarListItemName {
  color: var(--navbar-text-color);
  margin-top: 0.25rem;
}

.navbarListItemNameActive {
  color: var(--text-color-primary);
  margin-top: 0.25rem;
}

/* Page Containers & "Main" Div */
.explore,
.listingDetails,
.pageContainer,
.profileContainer {
  margin: 1rem;
}
@media (min-width: 1024px) {
  .explore,
  .listingDetails,
  .pageContainer,
  .profileContainer {
    margin: 3rem;
  }
}

.pageHeader {
  font-size: 2rem;
  font-weight: 800;
  text-align: center;
}

.pageParagraph {
  display: inline-flex;
  font-size: 0.875rem;
  margin-bottom: 3rem;
}

.emailPasswordText {
  display: inline-flex;
  wrap: nowrap;
  font-size: 0.875rem;
  margin-bottom: 3rem;
}

.mainDivPageContent {
  margin-top: 0rem;
  text-align: center;
  width: 100%;
}

/* Profile */
.profileDetailsHeader {
  align-items: center;
  display: flex;
  justify-content: space-evenly;
}

.profileDetailsText {
  font-weight: 600;
}

.profileCard {
  align-items: center;
  border-radius: 1rem;
  box-shadow: rgba(0, 0, 0, 0.2);
  display: inline-flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.logOutBar {
  align-items: center;
  display: flex;
  justify-content: center;
  position: relative;
  margin-bottom: 1rem;
}

.logOutButton {
  align-items: center;
  background-color: var(--primary-highlight-color);
  border: none;
  border-radius: 20px;
  color: var(--button-text-color);
  cursor: pointer;
  display: flex;
  font-size: 1.25rem;
  font-family: 'JetBrainsMono-Light';
  justify-content: center;
  margin-bottom: -1rem;
  padding: 0.5rem;
  width: 10rem;
}

/* Search Filter Dropdowns */
.dropdownContainer {
  align-items: center;  
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.searchFilterDropdown {
  appearance: none;
  background-image: url('./assets/svg/dropdownArrowReplacement.svg');
  background-position: right 0em top 50%;
  background-repeat: no-repeat, repeat;
  background-size: 1.4em;
  border: transparent;
  color: var(--text-color-primary);
  font-size: 1.25rem;
  font-family: 'JetBrainsMono-Light';
  height: 2.5em;
  margin: 0;
}
.searchFilterDropdown::-ms-expand {
  display: none;
}
.searchFilterDropdown:hover {
  cursor: pointer;
}
.searchFilterDropdown:focus {
  border-color: transparent;
  outline: none;
}
.searchFilterDropdown option {
  background-color: var(--text-color-primary);
  color: var(--button-text-color);
}

/* Result Stats & Ordering */
.resultsOrderAndLength {
  align-items: flex-start;
  display: inline-flex;
  flex-direction: row;
  justify-content: center;
  margin-bottom: 0;
  padding-bottom: 0;
  width: 100%;
}

.orderDropdownContainer {
  margin-right: 2rem;
  margin-top: 3rem;
}

.resultsOrderDropdown {
  appearance: none;
  background-image: url('./assets/svg/dropdownArrowReplacement.svg');
  background-position: right 0em top 50%;
  background-repeat: no-repeat, repeat;
  background-size: 1.4em;
  border: transparent;
  color: var(--text-color-primary);
  font-size: 1.25rem;
  font-family: 'JetBrainsMono-Light';
  height: 2.5em;
  margin: 0;
  width: 16rem;
}

.resultsOrderDropdown::-ms-expand {
  display: none;
}
.resultsOrderDropdown:hover {
  cursor: pointer;
}
.resultsOrderDropdown:focus {
  border-color: transparent;
  outline: none;
}
.resultsOrderDropdown option {
  background-color: var(--text-color-primary);
  color: var(--button-text-color);
}

.resultStats {
  margin-left: 2rem;
  margin-top: 2.5rem;
}

.resultStatsText {
  font-size: 1.25rem;
}

/* Movie Page */
.moviePageContainer {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 1rem;
  margin-bottom: 0;
  padding-bottom: 0;
}

.moviePagePosterOverview {
  align-items: flex-start;
  display: inline-flex;
  flex-direction: row;
  margin: 0.2rem;
}

.moviePagePoster {
  margin-right: 1.5rem;
  margin-top: 1.5rem;
  padding: 0;
  width: 10rem;
}

.movieOverview {
  font-size: 0.875rem;
  padding: 0;
  text-align: justify;
}
/* ... */

